--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "chart.js": "2.9.4"
+    "chart.js": "2.9.4",
+    "d3": "7.4.0"
   },
   "devDependencies": {
     "vite": "^2.9.9",
     "typescript": "4.6.2",
-    "@types/chart.js": "2.9.29"
+    "@types/chart.js": "2.9.29",
+    "@types/d3": "7.4.0"
   }
 }
